kubernetes/core/networking/nginx-int-ingress-system/services/pterodactyl-panel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl
  namespace: networking
spec:
  type: ExternalName
  externalName: hosting-srv-01.local.chkpwd.com
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
