kubernetes/core/networking/nginx-int-ingress-system/services/pterodactyl-panel/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app pterodactyl
  namespace: networking
spec:
  ingressClassName: int-ingress
  rules:
    - host: &host pterodactyl.k8s.chkpwd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 80
  tls:
    - hosts:
        - *host
